[gd_scene load_steps=5 format=3 uid="uid://d1mo64oispca2"]

[ext_resource type="Texture2D" uid="uid://cjdvlmyno5w6k" path="res://resources/2D Textures/level_button.png" id="1_eb284"]
[ext_resource type="Script" path="res://scripts/menus/elements/level_button.gd" id="1_vrhv1"]
[ext_resource type="LabelSettings" uid="uid://cudfeteri2b60" path="res://themes/label_level.tres" id="2_5yiy7"]
[ext_resource type="Texture2D" uid="uid://bhco6hjvnv3bd" path="res://resources/2D Textures/star_empty.png" id="3_lg4mv"]

[node name="LevelButton" type="Control"]
custom_minimum_size = Vector2(120, 130)
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_vrhv1")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
texture = ExtResource("1_eb284")
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -10
alignment = 1

[node name="LevelNumber" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "99"
label_settings = ExtResource("2_5yiy7")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MarginContainer1" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Star1" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_lg4mv")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Star2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_lg4mv")
expand_mode = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "
"
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
